# fre-framework

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  a.out  lsan.supp  tsan.supp  valgrind.supp
.cache/clangd/index/: allow_deny_evaluator.cpp.B96EA9AD889F3DDD.idx  allow_deny_evaluator.hpp.A98443615678CB2B.idx  concepts.hpp.1DDB8D94DE7105E5.idx  decision.hpp.3FBAC357B76863C2.idx  decision_serializer.cpp.17565CB5AE7E6242.idx  decision_serializer.hpp.04A37F19F637EC98.idx  emit_stage.cpp.E99CEA99F14DD655.idx  emit_stage.hpp.BCEB73F459BF500A.idx  error.cpp.E1773507FE59364B.idx  error.hpp.A8AEFD0A71A20ADC.idx  eval_stage.cpp.49DF578BE3FE88F0.idx  eval_stage.hpp.0CEB0EFAE6913DDE.idx  event.hpp.A50AFC3F8CC91535.idx  external_store.cpp.7409E9CF69EC79DD.idx  external_store.hpp.DF667DE5D2ED53D2.idx  fleet_router.cpp.0260761F325D38C0.idx  fleet_router.hpp.893A8CAF97D029A2.idx  harness.cpp.B40C2B75C17A6798.idx  harness.hpp.36472E375833B091.idx  hash_seeds.hpp.3B0AF21E7D9943B6.idx  inference_stage.cpp.BFCD83E41455493B.idx  inference_stage.hpp.8F26F3E1FBEDE2C1.idx  ingest_stage.cpp.9971F57AACF17E99.idx  ingest_stage.hpp.790632F84DF4F8B0.idx  logging.cpp.B817FAEE3C06BC82.idx  logging.hpp.A370099EB5A322B8.idx  main.cpp.2DD4369217BCB24F.idx  main.cpp.3662C2F7E77FAB6C.idx  main.cpp.8F37389C9D575046.idx  pipeline.cpp.E7B78943A61F732E.idx  pipeline.hpp.C7754293D1249EA7.idx  pipeline_config.cpp.B21E73D686BBAC9E.idx  pipeline_config.hpp.D7FC285EC10854F9.idx  pipeline_harness.cpp.6D07A9862AB6BB31.idx  pipeline_harness.hpp.395630B41483425D.idx  plugin_abi.h.F7B47A8E4A196481.idx  plugin_loader.cpp.CAAC3161D20AA2EA.idx  plugin_loader.hpp.44A33477F9E44ACD.idx  policy_stage.cpp.1E12692E07109C78.idx  policy_stage.hpp.D8CA35146D1DB309.idx  (+38 more)
.specify/memory/: constitution.md
cmake/: FreConfig.cmake.in  dependencies.cmake  version.hpp.in
examples/: CMakeLists.txt
examples/minimal_pipeline/: CMakeLists.txt  main.cpp
examples/ml_pipeline/: CMakeLists.txt  main.cpp
examples/multi_decision_pipeline/: CMakeLists.txt  main.cpp
include/fre/core/: concepts.hpp  decision.hpp  decision_type.hpp  error.hpp  event.hpp  logging.hpp  plugin_abi.h  verdict.hpp
include/fre/evaluator/: allow_deny_evaluator.hpp  onnx_inference_evaluator.hpp  plugin_loader.hpp  threshold_evaluator.hpp  windowed_historical_evaluator.hpp
include/fre/pipeline/: pipeline.hpp  pipeline_config.hpp  sync_submit.hpp
include/fre/policy/: rule_engine.hpp
include/fre/service/: decision_serializer.hpp  fleet_router.hpp
include/fre/sharding/: hash_seeds.hpp  tenant_router.hpp
include/fre/stage/: emit_stage.hpp  eval_stage.hpp  inference_stage.hpp  ingest_stage.hpp  policy_stage.hpp
include/fre/state/: duckdb_window_store.hpp  external_store.hpp  window_store.hpp  write_back_window_store.hpp
schemas/: decision.fbs
scripts/ci/: check-coverage.sh  run-sanitizers.sh  run-valgrind.sh
service/: CMakeLists.txt
service/include/fre/service/: harness.hpp
service/src/: fleet_router.cpp  harness.cpp  main.cpp
specs/001-nrt-detection-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nrt-detection-pipeline/checklists/: requirements.md
specs/001-nrt-detection-pipeline/contracts/: decision-record-contract.md  evaluator-contract.md  pipeline-config-contract.md  state-store-contract.md
specs/002-sync-submit-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sync-submit-api/checklists/: requirements.md
specs/002-sync-submit-api/contracts/: sync-submit-api.md
specs/003-fleet-shuffle-sharding/: plan.md  spec.md  tasks.md
specs/003-fleet-shuffle-sharding/contracts/: fleet-router-contract.md
specs/004-duckdb-external-storage/: plan.md  spec.md  tasks.md
specs/004-duckdb-external-storage/contracts/: duckdb-window-store-contract.md
specs/005-policy-leaf-nodes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-policy-leaf-nodes/checklists/: requirements.md
specs/006-write-back-window-store/: plan.md  spec.md  tasks.md
specs/007-realistic-perf-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/evaluator/: allow_deny_evaluator.cpp  onnx_inference_evaluator.cpp  plugin_loader.cpp  threshold_evaluator.cpp
src/pipeline/: decision_type.cpp  error.cpp  logging.cpp  pipeline.cpp  pipeline_config.cpp
src/policy/: rule_engine.cpp
src/service/: decision_serializer.cpp
src/sharding/: tenant_router.cpp
src/stage/: emit_stage.cpp  eval_stage.cpp  inference_stage.cpp  ingest_stage.cpp  policy_stage.cpp
src/state/: duckdb_window_store.cpp  external_store.cpp  redis_window_store.cpp  window_store.cpp  write_back_window_store.cpp
tests/: CMakeLists.txt
tests/contract/: CMakeLists.txt  test_custom_evaluator.cpp  test_evaluator_concepts.cpp  test_inference_concept.cpp  test_pipeline_contract.cpp  test_policy_concept.cpp  test_policy_rule_contract.cpp  test_threshold_contract.cpp
tests/integration/: CMakeLists.txt  test_custom_evaluator.cpp  test_duckdb_backend.cpp  test_external_store_fallback.cpp  test_fleet_routing.cpp  test_inference_timeout.cpp  test_load_p99.cpp  test_minimal_pipeline.cpp  test_ml_inference_stage.cpp  test_multi_decision_pipeline.cpp  test_policy_config_validation.cpp  test_policy_evaluation.cpp  test_policy_leaf_node_integration.cpp  test_realistic_load_p99.cpp  test_service_harness.cpp  test_sync_submit_integration.cpp  test_windowed_isolation.cpp  test_write_back_pipeline.cpp
tests/unit/: CMakeLists.txt  test_allow_deny_evaluator.cpp  test_core_types.cpp  test_decision_type_registry.cpp  test_duckdb_window_store.cpp  test_eval_stage_composition.cpp  test_fleet_router.cpp  test_latency_benchmark.cpp  test_pipeline_config.cpp  test_policy_leaf_nodes.cpp  test_policy_multi_decision.cpp  test_realistic_latency_benchmark.cpp  test_sync_submit.cpp  test_tenant_router.cpp  test_window_store.cpp  test_write_back_window_store.cpp
(+2 files in other folders)
